# snakemake-executor-plugin-lsf-sanger

./: CHANGELOG.md  README.md  pyproject.toml
conda/: meta.yaml
docs/: further.md  intro.md
snakemake_executor_plugin_lsf/: __init__.py
snakemake_executor_plugin_lsf_sanger/: __init__.py
tests/: tests.py
